[package]
name = "piper-grpc"
version = "0.2.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
env_logger = "0.10.0"
log = "0.4.18"
once_cell = "1.18.0"
piper-core = { version = "0.2.0", path = "../piper/core" }
piper-synth = { version = "0.2.0", path = "../piper/synth" }
piper-vits = { version = "0.2.0", path = "../piper/models/vits" }
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

[dependencies.ort]
version = "1.16.0"
default-features = false
features = ["load-dynamic",]

[build-dependencies]
tonic-build = "0.10.2"
