[package]
name = "piper-model"
version = "0.1.0"
edition = "2021"

[dependencies]
espeak-phonemizer = { path = "../espeak-phonemizer" }
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.ort]
version = "1.14.6"
features = ["load-dynamic"]
default-features = false
