[package]
name = "piper-model"
version = "0.1.0"
edition = "2021"

[dependencies]
espeak-phonemizer = { path = "../espeak-phonemizer" }
wave-writer = { path = "../wave-writer" }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.ort]
version = "1.14.8"
default-features = false
features = ["load-dynamic"]
