[package]
name = "pyper"
version = "0.2.0"
edition = "2021"

[lib]
name = "pyper"
crate-type = ["cdylib"]

[dependencies]
piper-core = { path = "../piper/core" }
piper-synth = { path = "../piper/synth" }
piper-vits = { path = "../piper/models/vits" }
once_cell = "1.18.0"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module", "abi3-py37"]

[dependencies.ort]
version = "1.16.3"
default-features = false
features = ["load-dynamic",]
