[package]
name = "sonata-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sonata"
path = "src/main.rs"

[features]
cuda = ["ort/cuda"]
ort-dylib = ["ort/load-dynamic"]

[dependencies]
sonata-synth = { version = "0.2.0", path = "../sonata/synth" }
sonata-piper = { version = "0.2.0", path = "../sonata/models/piper" }
anyhow = "1.0.79"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.clap]
version = "4.3.2"
features = ["derive",]

[dependencies.ort]
version = "2.0.0-rc.1"
