[package]
name = "sonata-python"
version = "0.2.0"
edition = "2021"

[lib]
name = "pysonata"
crate-type = ["cdylib"]

[features]
default = []
ort-dylib = ["ort/load-dynamic"]

[dependencies]
sonata-core = { path = "../sonata/core" }
sonata-synth = { path = "../sonata/synth" }
sonata-piper = { path = "../sonata/models/piper" }

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module", "abi3-py37"]

[dependencies.ort]
version = "2.0.0-alpha.4"

[build-dependencies]
fs_extra = "1.3.0"
