[build-system]
requires = ["maturin>=1.3"]
build-backend = "maturin"

[project]
name = "pysonata"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pysonata.pysonata"