[package]
name = "sonata-synth"
version = "0.2.0"
edition = "2021"

[lib]
name = "sonata_synth"

[dependencies]
sonata-core = { path = "../core" }
sonic-sys = { path = "../../sonic-sys" }
audio-ops = { path = "../../audio-ops" }
rayon = "1.7.0"
once_cell = "1.18.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }

[dev-dependencies]
sonata-piper = { path = "../models/piper" }
once_cell = "1.18.0"
divan = "0.1.2"

[dev-dependencies.ort]
version = "2.0.0-alpha.3"

[[bench]]
name = "benchmarks"
path = "src/benchmarks.rs"
harness = false

[[test]]
name = "tests"
path = "src/tests.rs"
