[package]
name = "libsonata"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsonata"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["piper"]
piper = ["dep:sonata-piper", "dep:ort"]
ort-dylib = ["ort/load-dynamic"]

[dependencies]
sonata-core = { version = "0.2.0", path = "../../sonata/core" }
sonata-synth = { version = "0.2.0", path = "../../sonata/synth" }
ffi-support = "0.4.4"
libc = "0.2.150"

[dependencies.sonata-piper]
version = "0.2.0"
path = "../../sonata/models/piper"
optional = true

[dependencies.ort]
version = "2.0.0-rc.9"
optional = true

[target.'cfg(target_os="android")'.dependencies.ort]
version = "2.0.0-rc.9"
features = ["nnapi"]
optional = true

[target.'cfg(target_os="ios")'.dependencies.ort]
version = "2.0.0-rc.9"
features = ["coreml"]
optional = true

[build-dependencies]
cbindgen = "0.26.0"
