[package]
name = "sonata-grpc"
version = "0.2.0"
edition = "2021"

[features]
default = []
ort-dylib = ["ort/load-dynamic"]

[dependencies]
async-stream = "0.3.5"
env_logger = "0.10.0"
log = "0.4.18"
sonata-core = { version = "0.2.0", path = "../../sonata/core" }
sonata-synth = { version = "0.2.0", path = "../../sonata/synth" }
sonata-piper = { version = "0.2.0", path = "../../sonata/models/piper" }
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[dependencies.ort]
version = "2.0.0-rc.9"

[build-dependencies]
tonic-build = "0.12.3"
