[package]
name = "piper-vits"
version = "0.2.0"
edition = "2021"

[dependencies]
espeak-phonemizer = { path = "../../../espeak-phonemizer" }
piper-core = { path = "../../core" }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
once_cell = "1.18.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
num_cpus = "1.15.0"
libtashkeel_base = { version = "1.2.0", default-features = false, features = ["ort"] }

[dependencies.ort]
version = "1.16.0"
default-features = false
features = ["load-dynamic"]
