[package]
name = "sonata-piper"
version = "0.2.0"
edition = "2021"

[dependencies]
espeak-phonemizer = { path = "../../../espeak-phonemizer" }
sonata-core = { path = "../../core" }
ndarray = "0.15.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
libtashkeel_base = { version = "1.2.0", default-features = false, features = ["ort"] }

[dependencies.ort]
version = "2.0.0-alpha.4"
