[package]
name = "sonata-piper"
version = "0.2.0"
edition = "2021"

[dependencies]
espeak-phonemizer = { path = "../../../text/espeak-phonemizer" }
sonata-core = { path = "../../core" }
ndarray = "0.16.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.libtashkeel_base]
version = "1.2.0"
default-features = false
features = ["ort", "rayon"]

[dependencies.ort]
version = "2.0.0-rc.1"
